Fixed navbar overflow issues

--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,7 @@ section header {
   margin-left: 310px;
   padding: 20px;
   margin-bottom: 110px;
+  margin-top: 50px;
 }
 
 /* footer {
@@ -46,11 +47,18 @@ section header {
 } */
 
 #navbar ul {
-  list-style: none;
   padding: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+#navbar li {
+  position: relative;
+  list-style: none;
 }
 
 #navbar a {
+  display: block;
   text-decoration: none;
   color: #000000;
   height: 35px;
@@ -76,24 +84,24 @@ section header {
   #navbar ul {
     border: 1px solid;
     height: 207px;
+    background-color: white;
   }
 
   #navbar {
-    background-color: white;
     position: absolute;
     top: 0;
     padding: 0;
     margin: 0;
     width: 100%;
-    max-height: 275px;
+    max-height: 270px;
     border: none;
-    /* z-index: 1; */
-    border-bottom: 2px solid;
+    z-index: 1;
   }
 
   #main-doc {
     position: relative;
+    padding-top: 0;
     margin-left: 0px;
-    margin-top: 270px;
+    margin-top: 320px;
   }
 }
